--- a/README.Rmd
+++ b/README.Rmd
@@ -29,6 +29,8 @@ devtools::install_github("chris-prener/testDriveR")
 The package currently contains three data tables:
 
 * `auto17` - A data set containing model year 2017 vehicles for sale in the United States
+* `gss16` - A data set containing a selection of variables related to work and education from the 2016 General Social Survey
+* `gss16_Miss` - A copy of `gss16` without missing data explicitly identified for teaching about missing data
 
 ## Contributor Code of Conduct
 Please note that this project is released with a [Contributor Code of Conduct](CONDUCT.md). By participating in this project you agree to abide by its terms.
