update readme to force travis/codecov d/t codecov error

--- a/README.Rmd
+++ b/README.Rmd
@@ -37,5 +37,13 @@ The package currently contains three data tables:
 * `gss16_Miss` - A copy of `gss16` without missing data explicitly identified for teaching about missing data
 * `kerrich` - A data set containing 2000 trials of coin flips by John Edmund Kerrich
 
+## Use
+
+```r
+library("testDriveR")
+autoData <- auto17
+str(autoData)
+```
+
 ## Contributor Code of Conduct
 Please note that this project is released with a [Contributor Code of Conduct](CONDUCT.md). By participating in this project you agree to abide by its terms.
