--- a/README.Rmd
+++ b/README.Rmd
@@ -49,4 +49,4 @@ str(autoData)
 ```
 
 ## Contributor Code of Conduct
-Please note that this project is released with a [Contributor Code of Conduct](CONDUCT.md). By participating in this project you agree to abide by its terms.
+Please note that this project is released with a [Contributor Code of Conduct](.github/CODE_OF_CONDUCT.md). By participating in this project you agree to abide by its terms.
