add cran installation to readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -23,7 +23,13 @@ The goal of `testDriveR` is to provide data sets for teaching statistics and dat
 
 ## Installation
 
-`testDriveR` is not available from CRAN yet. In the meantime, you can install the development version of `testDriveR` from [Github](https://github.com/chris-prener/testDriveR) with `remotes`:
+The easiest way to get `testDriveR` is to install it from CRAN:
+
+``` r
+install.packages("testDriveR")
+```
+
+You can also install the development version of `testDriveR` from [Github](https://github.com/chris-prener/testDriveR) with `remotes`:
 
 ```{r gh-installation, eval = FALSE}
 # install.packages("remotes")
@@ -31,7 +37,7 @@ remotes::install_github("chris-prener/testDriveR")
 ```
 
 ## Current Data
-The package currently contains three data tables:
+The package currently contains five data tables:
 
 * `auto17` - A data set containing model year 2017 vehicles for sale in the United States
 * `childMortality` - A data set containing childhood mortality time series data by country from UNICEF
